revertendo edit menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Menu Principal</h1>
 				<ul>
 				<a href="index.html">
-				<li>Início - MOD</li>
+				<li>Início</li>
 				</a >
 				<a href="poesias.html">
 				<li>Poesias</li>
