--- a/poesias.html
+++ b/poesias.html
@@ -17,7 +17,7 @@
 					<li>Início</li>
 					</a >
 					<a href="poesias.html">
-					<li>Poesias - MOD</li>
+					<li>Poesias</li>
 					</a>
 					<a href="sobrela.html">
 					<li>Sobrela</li>
